data structures 1.4 complete

--- a/data_structures/1_4/Makefile
+++ b/data_structures/1_4/Makefile
@@ -10,6 +10,10 @@ bin: $(FILENAME).c Makefile
 run: $(FILENAME)
 	./$(FILENAME)
 
+debug:
+	gcc -DDEBUG -g -o $(FILENAME) $(FILENAME).c
+	gdb $(FILENAME)
+
 .PHONY: clean
 
 clean:
