--- a/data_structures/list/Makefile
+++ b/data_structures/list/Makefile
@@ -1,7 +1,9 @@
-default: list.c
+default: *.c
 	gcc -c *.c
+	gcc -o list list.o
+	gcc -o cursor cursor.o
 
 .PHONY: clean
 
 clean:
-	rm *~ \.*~ *.o
+	rm *~ \.*~ *.o list cursor
