two sum uthash.h ok

--- a/leetcode/twoSum/Makefile
+++ b/leetcode/twoSum/Makefile
@@ -1,4 +1,4 @@
-BIN = Approach_1 Approach_2 Approach_3 Approach_4
+BIN = Approach_1 Approach_2 Approach_3 Approach_4 Approach_5
 
 1_Approach: Approach_1.c
 	gcc Approach_1.c -o Approach_1
@@ -12,6 +12,9 @@ BIN = Approach_1 Approach_2 Approach_3 Approach_4
 4_Approach: Approach_4.c
 	gcc Approach_4.c -o Approach_4
 
+5_Approach: Approach_5.c
+	gcc Approach_5.c -o Approach_5
+
 debug1_Approach: Approach_1.c
 	gcc -g Approach_1.c -o Approach_1
 
@@ -23,6 +26,9 @@ debug3_Approach: Approach_3.c
 
 debug4_Approach: Approach_4.c
 	gcc -g Approach_4.c -o Approach_4
+
+debug5_Approach: Approach_5.c
+	gcc -g Approach_5.c -o Approach_5
 	
 .PHONY: clean
 
