--- a/java/net/tcp/netcopyfile/build.xml
+++ b/java/net/tcp/netcopyfile/build.xml
@@ -7,4 +7,10 @@
             <fileset dir="com"/>
         </delete>
     </target>
+
+    <target name="compile" depends="clean">
+        <javac srcdir="${basedir}">
+            <compilerarg line="-d ${basedir}"/>
+        </javac>
+    </target>
 </project>
